Fix the slow auto scrolling speed as suggested in https://stackoverflow.com/a/69637043/1862286.

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: unset !important
+}
+
 body {
     margin: 0;
     padding: 0;
